[gd_scene load_steps=5 format=3 uid="uid://cjj50fc53hmi1"]

[ext_resource type="Theme" uid="uid://bfmhlm5dgdsvs" path="res://sprites/UI/UI.tres" id="1_ggjo7"]
[ext_resource type="Script" uid="uid://vprculpq8em2" path="res://scripts/day_summary.gd" id="2_ggjo7"]
[ext_resource type="FontFile" uid="uid://cmowptq4b1wr" path="res://sprites/UI/celtic-bitty.ttf" id="3_7xhxj"]
[ext_resource type="AudioStream" uid="uid://coaw75bax1mx6" path="res://audio/sfx/Games, Video, Medieval, GUI, Select, Sword Maker SND63099.wav" id="3_m7grt"]

[node name="DaySummary" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 320.0
offset_bottom = 180.0
theme = ExtResource("1_ggjo7")
script = ExtResource("2_ggjo7")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 75.0
grow_horizontal = 2
theme_override_constants/shadow_offset_y = 1
text = "Daily Summary"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(320, 130)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="MenuButtons" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 87)
layout_mode = 2
theme_override_constants/separation = 6

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
alignment = 2

[node name="label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/MenuButtons/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ggjo7")
theme_override_constants/shadow_offset_y = 1
text = "Income:"

[node name="DailyIncome" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/MenuButtons/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ggjo7")
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_constants/shadow_offset_y = 0
theme_override_fonts/font = ExtResource("3_7xhxj")
text = "$18"

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
alignment = 2

[node name="label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/MenuButtons/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_ggjo7")
theme_override_constants/shadow_offset_y = 1
text = "Costs:"

[node name="DailyCosts" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/MenuButtons/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_ggjo7")
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_constants/shadow_offset_y = 0
theme_override_fonts/font = ExtResource("3_7xhxj")
text = "$10"

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
alignment = 2

[node name="label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/MenuButtons/HBoxContainer3"]
layout_mode = 2
theme = ExtResource("1_ggjo7")
theme_override_constants/shadow_offset_y = 1
text = "Net:"

[node name="DailyNet" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/MenuButtons/HBoxContainer3"]
layout_mode = 2
theme = ExtResource("1_ggjo7")
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_constants/shadow_offset_y = 0
theme_override_fonts/font = ExtResource("3_7xhxj")
text = "  $8"

[node name="HBoxContainer4" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
alignment = 2

[node name="label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/MenuButtons/HBoxContainer4"]
layout_mode = 2
theme = ExtResource("1_ggjo7")
theme_override_constants/shadow_offset_y = 1
text = "Wallet:"

[node name="TotalMoney" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/MenuButtons/HBoxContainer4"]
layout_mode = 2
theme = ExtResource("1_ggjo7")
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_constants/shadow_offset_y = 0
theme_override_fonts/font = ExtResource("3_7xhxj")
text = "$23"

[node name="MenuButtons2" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 87)
layout_mode = 2
theme_override_constants/separation = 4

[node name="Upgrades" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/MenuButtons2"]
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
theme = ExtResource("1_ggjo7")
theme_override_constants/shadow_offset_y = 1
text = "Upgrades:"
vertical_alignment = 1

[node name="UpgradeWalls" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/MenuButtons2" groups=["button"]]
layout_mode = 2
theme = ExtResource("1_ggjo7")
toggle_mode = true
text = "$30 - Walls
"
flat = true
alignment = 0

[node name="UpgradeRoof" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/MenuButtons2" groups=["button"]]
layout_mode = 2
theme = ExtResource("1_ggjo7")
disabled = true
toggle_mode = true
text = "$20 - Roof
"
flat = true
alignment = 0

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer" groups=["button"]]
layout_mode = 2
theme = ExtResource("1_ggjo7")
text = "Next Day"
flat = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="CenterContainer/VBoxContainer/StartButton"]
stream = ExtResource("3_m7grt")

[connection signal="toggled" from="CenterContainer/VBoxContainer/HBoxContainer/MenuButtons2/UpgradeWalls" to="." method="_on_upgrade_walls_toggled"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/HBoxContainer/MenuButtons2/UpgradeRoof" to="." method="_on_upgrade_roof_toggled"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
